vlib/v/checker/tests/fn_call_arg_mismatch_err_b.out
vlib/v/checker/tests/fn_call_arg_mismatch_err_b.vv:2:6: error: cannot use `void` as `int` in argument 1 to `foo`
    1 | fn main() {
    2 |     foo(bar())
      |         ~~~~~
    3 | }
    4 |
