vlib/v/checker/tests/fn_call_arg_mismatch_err_b.vv
fn main() {
	foo(bar())
}

fn foo(x int) {}

fn bar() {}
